[package]
name = "racy_web"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = { git = "https://github.com/ckampfe/console_log", branch = "main" }
js-sys = "0.3"
racy = { path = "../racy" }
nalgebra = "0.24"
nom_stl = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "Performance", "Window"] }
yew = "0.17"

# [profile.dev.package.racy]
# opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
crate-type = ["cdylib"]
